@@ -1,6 +1,7 @@
 (08/06/14)
 ==========
 
+· Updated check_lastmod_img
 · Added Emulators > UAE4Armiga4Pi
 · Added Games > Return to Castle Wolfenstein (demo)
 
